--- a/d3sample_1.html
+++ b/d3sample_1.html
@@ -3,7 +3,10 @@
 		<script type="text/javascript" src="src/d3.v2.min.js" ></script>
 		<script type="text/javascript" src="d3sample_1.js"></script>
 		<script type="text/javascript" src="lib/graph.js"></script>
+		<script type="text/javascript" src="lib/constants.js"></script>
 		<link rel="stylesheet" type="text/css" href="d3sample_1.css"></link>
 	</head>
-	<body onload="init()"></body>
+	<body onload="init()">
+		<div id="chart3rdiv"></div>
+	</body>
 </html>
