- Added demo folder for demo files - Moved appriopriate files to demo folder

--- a/demo/d3sample_1.html
+++ b/demo/d3sample_1.html
@@ -1,9 +1,9 @@
 <html>
 	<head>
-		<script type="text/javascript" src="lib/d3.v2.min.js" ></script>
+		<script type="text/javascript" src="../lib/d3.v2.min.js" ></script>
 		<script type="text/javascript" src="d3sample_1.js"></script>
-		<script type="text/javascript" src="src/graph.js"></script>
-		<script type="text/javascript" src="src/constants.js"></script>
+		<script type="text/javascript" src="../src/graph.js"></script>
+		<script type="text/javascript" src="../src/constants.js"></script>
 		<link rel="stylesheet" type="text/css" href="d3sample_1.css"></link>
 	</head>
 	<body onload="init()">
