--- a/demo/d3sample_1.html
+++ b/demo/d3sample_1.html
@@ -4,6 +4,7 @@
 		<script type="text/javascript" src="d3sample_1.js"></script>
 		<script type="text/javascript" src="../src/graph.js"></script>
 		<script type="text/javascript" src="../src/constants.js"></script>
+		<script type="text/javascript" src="../src/utility.js"></script>
 		<link rel="stylesheet" type="text/css" href="d3sample_1.css"></link>
 	</head>
 	<body onload="init()">
