Bargraph code up and running, time for refining and cleaning up

--- a/demo/d3sample_1.html
+++ b/demo/d3sample_1.html
@@ -5,6 +5,7 @@
 		<script type="text/javascript" src="../src/graph.js"></script>
 		<script type="text/javascript" src="../src/constants.js"></script>
 		<script type="text/javascript" src="../src/utility.js"></script>
+		<script type="text/javascript" src="../src/bar.js"></script>
 		<link rel="stylesheet" type="text/css" href="d3sample_1.css"></link>
 	</head>
 	<body onload="init()">
