--- a/demo/d3sample_1.html
+++ b/demo/d3sample_1.html
@@ -7,6 +7,7 @@
 		<script type="text/javascript" src="../src/utility.js"></script>
 		<script type="text/javascript" src="../src/bar.js"></script>
 		<script type="text/javascript" src="../src/stepup_bar.js"></script>
+		<script type="text/javascript" src="../src/stacked_bar.js"></script>
 		<link rel="stylesheet" type="text/css" href="d3sample_1.css"></link>
 	</head>
 	<body onload="init()">
