--- a/demo/d3sample_1.html
+++ b/demo/d3sample_1.html
@@ -8,7 +8,8 @@
 		<script type="text/javascript" src="../src/bar.js"></script>
 		<script type="text/javascript" src="../src/stepup_bar.js"></script>
 		<script type="text/javascript" src="../src/stacked_bar.js"></script>
-		<Script type="text/javascript" src="../src/line.js"></script>
+		<script type="text/javascript" src="../src/line.js"></script>
+		<script type="text/javascript" src="../src/area.js"></script>
 		<link rel="stylesheet" type="text/css" href="d3sample_1.css"></link>
 	</head>
 	<body onload="init()">
