- Table graphs included, both horizontal and vertical representation of   data - Horizontal axis changes, correcting the minor ticks alignment - Lots of other miscelleanous corrections

--- a/test/d3sample_1.html
+++ b/test/d3sample_1.html
@@ -10,6 +10,8 @@
 		<script type="text/javascript" src="../src/stacked_bar.js"></script>
 		<script type="text/javascript" src="../src/line.js"></script>
 		<script type="text/javascript" src="../src/area.js"></script>
+		<script type="text/javascript" src="../src/table.js"></script>
+		<script type="text/javascript" src="../src/tablegraph.js"></script>
 		<link rel="stylesheet" type="text/css" href="d3sample_1.css"></link>
 	</head>
 	<body onload="init()">
