--- a/d3/examples/donut/donut.html
+++ b/d3/examples/donut/donut.html
@@ -17,7 +17,7 @@ body {
 var width = 400,
     height = 400,
     outerRadius = Math.min(width, height) / 2,
-    innerRadius = outerRadius * .6,
+    innerRadius = 0,
     n = 10,
     q = 0,
     data0 = d3.range(n).map(Math.random),
@@ -31,6 +31,8 @@ var vis = d3.select("body")
   .append("svg")
     .attr("width", width)
     .attr("height", height);
+
+console.log(data0); console.log(data1);
 
 vis.selectAll("g.arc")
     .data(arcs(data0, data1))
