Test changes to render donut and pie chart

--- a/test/d3sample_1.html
+++ b/test/d3sample_1.html
@@ -11,7 +11,9 @@
 		<script type="text/javascript" src="../src/line.js"></script>
 		<script type="text/javascript" src="../src/area.js"></script>
 		<script type="text/javascript" src="../src/table.js"></script>
-		<script type="text/javascript" src="../src/tablegraph.js"></script>
+		<script type="text/javascript" src="../src/tablegraph.js"></script>		
+		<script type="text/javascript" src="../src/donut.js"></script>		
+		<script type="text/javascript" src="../src/pie.js"></script>
 		<link rel="stylesheet" type="text/css" href="d3sample_1.css"></link>
 	</head>
 	<body onload="init()">
