Configuration based dom elements naming

--- a/test/d3sample_1.html
+++ b/test/d3sample_1.html
@@ -17,6 +17,6 @@
 		<link rel="stylesheet" type="text/css" href="d3sample_1.css"></link>
 	</head>
 	<body onload="init()">
-		<div id="chart3rdiv"></div>
+		<div id="r3_div"></div>
 	</body>
 </html>
