- Config files based changes across source - Experiments with events - Other refactoring stuff

--- a/test/d3sample_1.html
+++ b/test/d3sample_1.html
@@ -3,6 +3,7 @@
 		<script type="text/javascript" src="../lib/d3.v2.min.js" ></script>
 		<script type="text/javascript" src="d3sample_1.js"></script>
 		<script type="text/javascript" src="../src/graph.js"></script>
+		<script type="text/javascript" src="../src/config.js"></script>
 		<script type="text/javascript" src="../src/constants.js"></script>
 		<script type="text/javascript" src="../src/utility.js"></script>
 		<script type="text/javascript" src="../src/bar.js"></script>
