Lots of awesome changes, reflected in test files. Check them out

--- a/test/d3sample_1.html
+++ b/test/d3sample_1.html
@@ -11,6 +11,7 @@
 		<script type="text/javascript" src="../src/stacked_bar.js"></script>
 		<script type="text/javascript" src="../src/line.js"></script>
 		<script type="text/javascript" src="../src/area.js"></script>
+		<script type="text/javascript" src="../src/stacked_areagraph.js"></script>
 		<script type="text/javascript" src="../src/table.js"></script>
 		<script type="text/javascript" src="../src/tablegraph.js"></script>		
 		<script type="text/javascript" src="../src/donut.js"></script>		
