--- a/test/data/data_test.html
+++ b/test/data/data_test.html
@@ -1,6 +1,7 @@
 <head>
 	<head>
 		<Script type="text/javascript" src="../../lib/jquery-1.7.2.min.js"></Script>
+		<Script type="text/javascript" src="sample_dataset_1.js"></Script>
 		<Script type="text/javascript" src="../../src/data/data.js"></Script>
 		<Script type="text/javascript" src="data_test.js"></Script>
 	</head>
