Ungroupby first commit and putting code in appriopriate module related folders

--- a/test/d3/d3sample_1.html
+++ b/test/d3/d3sample_1.html
@@ -2,20 +2,20 @@
 	<head>
 		<script type="text/javascript" src="../../lib/d3.v2.min.js" ></script>
 		<script type="text/javascript" src="d3sample_1.js"></script>
-		<script type="text/javascript" src="../../src/graph.js"></script>
-		<script type="text/javascript" src="../../src/config.js"></script>
-		<script type="text/javascript" src="../../src/constants.js"></script>
-		<script type="text/javascript" src="../../src/utility.js"></script>
-		<script type="text/javascript" src="../../src/bar.js"></script>
-		<script type="text/javascript" src="../../src/stepup_bar.js"></script>
-		<script type="text/javascript" src="../../src/stacked_bar.js"></script>
-		<script type="text/javascript" src="../../src/line.js"></script>
-		<script type="text/javascript" src="../../src/area.js"></script>
-		<script type="text/javascript" src="../../src/stacked_areagraph.js"></script>
-		<script type="text/javascript" src="../../src/table.js"></script>
-		<script type="text/javascript" src="../../src/tablegraph.js"></script>		
-		<script type="text/javascript" src="../../src/donut.js"></script>		
-		<script type="text/javascript" src="../../src/pie.js"></script>
+		<script type="text/javascript" src="../../src/gfx/graph.js"></script>
+		<script type="text/javascript" src="../../src/util/config.js"></script>
+		<script type="text/javascript" src="../../src/util/constants.js"></script>
+		<script type="text/javascript" src="../../src/util/utility.js"></script>
+		<script type="text/javascript" src="../../src/gfx/bar.js"></script>
+		<script type="text/javascript" src="../../src/gfx/stepup_bar.js"></script>
+		<script type="text/javascript" src="../../src/gfx/stacked_bar.js"></script>
+		<script type="text/javascript" src="../../src/gfx/line.js"></script>
+		<script type="text/javascript" src="../../src/gfx/area.js"></script>
+		<script type="text/javascript" src="../../src/gfx/stacked_areagraph.js"></script>
+		<script type="text/javascript" src="../../src/gfx/table.js"></script>
+		<script type="text/javascript" src="../../src/gfx/tablegraph.js"></script>		
+		<script type="text/javascript" src="../../src/gfx/donut.js"></script>		
+		<script type="text/javascript" src="../../src/gfx/pie.js"></script>
 		<link rel="stylesheet" type="text/css" href="d3sample_1.css"></link>
 	</head>
 	<body onload="init()">
