Modules to select specific columns, filter based on conditions, and eventually query added

--- a/test/data/data_test.html
+++ b/test/data/data_test.html
@@ -5,6 +5,7 @@
 		<Script type="text/javascript" src="../../src/data/data.js"></Script>
 		<Script type="text/javascript" src="../../src/data/groupby.js"></Script>
 		<Script type="text/javascript" src="../../src/data/ungroupby.js"></Script>
+		<Script type="text/javascript" src="../../src/data/select.js"></Script>
 		<Script type="text/javascript" src="data_test.js"></Script>
 	</head>
 	<body onload="init()">
