config based fonts on axis labels, yay

--- a/test/d3/d3sample_1.html
+++ b/test/d3/d3sample_1.html
@@ -1,5 +1,6 @@
 <html>
 	<head>
+		<link href='http://fonts.googleapis.com/css?family=Ubuntu:400,500' rel='stylesheet' type='text/css'>
 		<script type="text/javascript" src="../../lib/d3.v2.min.js" ></script>
 		<script type="text/javascript" src="d3sample_1.js"></script>
 		<script type="text/javascript" src="../../src/gfx/graph.js"></script>
