--- a/test/d3/d3sample_1.html
+++ b/test/d3/d3sample_1.html
@@ -7,6 +7,8 @@
 		<script type="text/javascript" src="../../src/util/config.js"></script>
 		<script type="text/javascript" src="../../src/util/constants.js"></script>
 		<script type="text/javascript" src="../../src/util/utility.js"></script>
+		<script type="text/javascript" src="../../src/util/palette.js"></script>
+		<script type="text/javascript" src="../../src/util/effects.js"></script>
 		<script type="text/javascript" src="../../src/gfx/bar.js"></script>
 		<script type="text/javascript" src="../../src/gfx/stepup_bar.js"></script>
 		<script type="text/javascript" src="../../src/gfx/stacked_bar.js"></script>
