--- a/test/data/data_test.html
+++ b/test/data/data_test.html
@@ -1,13 +1,34 @@
 <head>
 	<head>
 		<Script type="text/javascript" src="../../lib/jquery-1.7.2.min.js"></Script>
-		<Script type="text/javascript" src="sample_dataset_1.js"></Script>
+		<link href='http://fonts.googleapis.com/css?family=Ubuntu:400,500' rel='stylesheet' type='text/css'>
+		<script type="text/javascript" src="../../lib/d3.v2.min.js" ></script>
+		<script type="text/javascript" src="../../src/gfx/graph.js"></script>
+		<script type="text/javascript" src="../../src/util/config.js"></script>
+		<script type="text/javascript" src="../../src/util/constants.js"></script>
+		<script type="text/javascript" src="../../src/util/utility.js"></script>
+		<script type="text/javascript" src="../../src/util/palette.js"></script>
+		<script type="text/javascript" src="../../src/util/effects.js"></script>
+		<script type="text/javascript" src="../../src/gfx/bar.js"></script>
+		<script type="text/javascript" src="../../src/gfx/stepup_bar.js"></script>
+		<script type="text/javascript" src="../../src/gfx/stacked_bar.js"></script>
+		<script type="text/javascript" src="../../src/gfx/line.js"></script>
+		<script type="text/javascript" src="../../src/gfx/area.js"></script>
+		<script type="text/javascript" src="../../src/gfx/stacked_areagraph.js"></script>
+		<script type="text/javascript" src="../../src/gfx/table.js"></script>
+		<script type="text/javascript" src="../../src/gfx/tablegraph.js"></script>		
+		<script type="text/javascript" src="../../src/gfx/donut.js"></script>		
+		<script type="text/javascript" src="../../src/gfx/pie.js"></script>	
 		<Script type="text/javascript" src="../../src/data/data.js"></Script>
 		<Script type="text/javascript" src="../../src/data/groupby.js"></Script>
 		<Script type="text/javascript" src="../../src/data/ungroupby.js"></Script>
 		<Script type="text/javascript" src="../../src/data/select.js"></Script>
+		<Script type="text/javascript" src="../../src/data/having.js"></Script>
+		<Script type="text/javascript" src="../../src/data/plotter.js"></Script>
+		<Script type="text/javascript" src="sample_dataset_1.js"></Script>
 		<Script type="text/javascript" src="data_test.js"></Script>
 	</head>
 	<body onload="init()">
+		<div id="r3_div"></div>
 	</body>
 </head>
