Jasmine specs for graph util library added

--- a/jasmine/SpecRunner.html
+++ b/jasmine/SpecRunner.html
@@ -11,12 +11,29 @@
   <script type="text/javascript" src="lib/jasmine-1.1.0/jasmine-html.js"></script>
 
   <!-- include source files here... -->
-  <script type="text/javascript" src="spec/SpecHelper.js"></script>
-  <script type="text/javascript" src="spec/PlayerSpec.js"></script>
+  <script type="text/javascript" src="../lib/d3.v2.min.js"></script>
+  <script type="text/javascript" src="../lib/jquery-1.7.2.min.js"></script>
+  <script type="text/javascript" src="../lib/miso.ds.deps.min.0.1.0.js"></script>  
+  <script type="text/javascript" src="../src/gfx/graph.js"></script>  
+  <script type="text/javascript" src="../src/util/utility.js"></script>
+  <script type="text/javascript" src="../src/gfx/bar.js"></script>
+  <script type="text/javascript" src="../src/gfx/area.js"></script>
+  <script type="text/javascript" src="../src/gfx/stacked_bar.js"></script>
+  <script type="text/javascript" src="../src/gfx/stepup_bar.js"></script>
+  <script type="text/javascript" src="../src/gfx/line.js"></script>
+  <script type="text/javascript" src="../src/gfx/donut.js"></script>
+  <script type="text/javascript" src="../src/gfx/pie.js"></script>
+  <script type="text/javascript" src="../src/gfx/stacked_area.js"></script>
+  <script type="text/javascript" src="../src/gfx/table.js"></script>
+  <script type="text/javascript" src="../src/gfx/tablegraph.js"></script>
+  <script type="text/javascript" src="../src/util/config.js"></script>
+  <script type="text/javascript" src="../src/util/constants.js"></script>
+  <script type="text/javascript" src="../src/util/effects.js"></script>
+  <script type="text/javascript" src="../src/util/palette.js"></script>
 
   <!-- include spec files here... -->
-  <script type="text/javascript" src="src/Player.js"></script>
-  <script type="text/javascript" src="src/Song.js"></script>
+  <script type="text/javascript" src="spec/GraphUtilSpec.js"></script>
+  <script type="text/javascript" src="spec/GraphObjectSpec.js"></script>
 
   <script type="text/javascript">
     (function() {
