--- a/test/d3/d3sample_1.html
+++ b/test/d3/d3sample_1.html
@@ -2,6 +2,7 @@
 	<head>
 		<link href='http://fonts.googleapis.com/css?family=Ubuntu:400,500' rel='stylesheet' type='text/css'>
 		<script type="text/javascript" src="../../lib/d3.v2.min.js" ></script>
+		<script type="text/javascript" src="../../lib/jquery-1.7.2.min.js" ></script>
 		<script type="text/javascript" src="d3sample_1.js"></script>
 		<script type="text/javascript" src="../../src/gfx/graph.js"></script>
 		<script type="text/javascript" src="../../src/util/config.js"></script>
