Added support for percent area graph and all relevant changes across files

--- a/test/d3/d3sample_1.html
+++ b/test/d3/d3sample_1.html
@@ -16,6 +16,7 @@
 		<script type="text/javascript" src="../../src/gfx/line.js"></script>
 		<script type="text/javascript" src="../../src/gfx/area.js"></script>
 		<script type="text/javascript" src="../../src/gfx/stacked_areagraph.js"></script>
+		<script type="text/javascript" src="../../src/gfx/percent_areagraph.js"></script>
 		<script type="text/javascript" src="../../src/gfx/table.js"></script>
 		<script type="text/javascript" src="../../src/gfx/tablegraph.js"></script>		
 		<script type="text/javascript" src="../../src/gfx/donut.js"></script>		
