--- a/test/d3/d3sample_1.html
+++ b/test/d3/d3sample_1.html
@@ -15,8 +15,8 @@
 		<script type="text/javascript" src="../../src/gfx/stacked_bar.js"></script>
 		<script type="text/javascript" src="../../src/gfx/line.js"></script>
 		<script type="text/javascript" src="../../src/gfx/area.js"></script>
-		<script type="text/javascript" src="../../src/gfx/stacked_areagraph.js"></script>
-		<script type="text/javascript" src="../../src/gfx/percent_areagraph.js"></script>
+		<script type="text/javascript" src="../../src/gfx/stacked_area.js"></script>
+		<script type="text/javascript" src="../../src/gfx/percent_area.js"></script>
 		<script type="text/javascript" src="../../src/gfx/table.js"></script>
 		<script type="text/javascript" src="../../src/gfx/tablegraph.js"></script>		
 		<script type="text/javascript" src="../../src/gfx/donut.js"></script>		
