Percent bar graph: variation of stacked bar graph added

--- a/test/d3/d3sample_1.html
+++ b/test/d3/d3sample_1.html
@@ -13,6 +13,7 @@
 		<script type="text/javascript" src="../../src/gfx/bar.js"></script>
 		<script type="text/javascript" src="../../src/gfx/stepup_bar.js"></script>
 		<script type="text/javascript" src="../../src/gfx/stacked_bar.js"></script>
+		<script type="text/javascript" src="../../src/gfx/percent_bar.js"></script>
 		<script type="text/javascript" src="../../src/gfx/line.js"></script>
 		<script type="text/javascript" src="../../src/gfx/area.js"></script>
 		<script type="text/javascript" src="../../src/gfx/stacked_area.js"></script>
