Favicon added but doesnt work yet :(

--- a/test/d3/d3sample_1.html
+++ b/test/d3/d3sample_1.html
@@ -23,6 +23,7 @@
 		<script type="text/javascript" src="../../src/gfx/donut.js"></script>		
 		<script type="text/javascript" src="../../src/gfx/pie.js"></script>
 		<link rel="stylesheet" type="text/css" href="d3sample_1.css"></link>
+		<title>r3vis Test Arena</title>
 	</head>
 	<body onload="init()">
 		<div id="r3_div"></div>
