- Modified class names as per function naming convention - Updated logic involved in creating hover effects for bar type graphs - Updated d3 test to work with new changes

--- a/test/d3/d3sample_1.html
+++ b/test/d3/d3sample_1.html
@@ -4,7 +4,7 @@
 		<script type="text/javascript" src="../../lib/d3.v3.min.js" ></script>
 		<script type="text/javascript" src="../../lib/jquery-1.7.2.min.js" ></script>
 		<script type="text/javascript" src="d3sample_1.js"></script>
-		<script type="text/javascript" src="../../dist/r3_gfx.min.js"></script>
+		<script type="text/javascript" src="../../dist/r3_gfx.js"></script>
 		<link rel="stylesheet" type="text/css" href="d3sample_1.css"></link>
 		<title>r3vis Test Arena</title>
 	</head>
