- CSS based styling for defaults, can be overridden using configuration - Toggle effects on legends extended to other charts, pending:   percentArea and percentBar - Toggle effect is now a function on the graph object itself instead of   specific graph :) - Updated d3 test to work with current changes

--- a/test/d3/d3sample_1.html
+++ b/test/d3/d3sample_1.html
@@ -6,6 +6,7 @@
 		<script type="text/javascript" src="d3sample_1.js"></script>
 		<script type="text/javascript" src="../../dist/r3_gfx.js"></script>
 		<link rel="stylesheet" type="text/css" href="d3sample_1.css"></link>
+		<link rel="stylesheet" type="text/css" href="../../dist/r3.css">
 		<title>r3vis Test Arena</title>
 	</head>
 	<body onload="init()">
