- Added register mechanism to graphs to help others add new graphtypes to the r3 library - Moved few configuration options from 1 section to another

--- a/test/d3/d3sample_1.html
+++ b/test/d3/d3sample_1.html
@@ -10,6 +10,7 @@
 		<title>r3vis Test Arena</title>
 	</head>
 	<body onload="init()">
-		<div id="r3_div"></div>
+		<div class="r3_div"></div>
+		<div class="r3_div"></div>
 	</body>
 </html>
