--- a/test/d3/uvCharts-test.html
+++ b/test/d3/uvCharts-test.html
@@ -3,10 +3,10 @@
 		<link href='http://fonts.googleapis.com/css?family=Ubuntu:400,500' rel='stylesheet' type='text/css'>
 		<script type="text/javascript" src="../../lib/d3.v3.min.js" ></script>
 		<script type="text/javascript" src="../../lib/jquery-1.9.1.min.js" ></script>
-		<script type="text/javascript" src="d3sample_1.js"></script>
+		<script type="text/javascript" src="uvCharts_test.js"></script>
 		<script type="text/javascript" src="../../dist/uvcharts.js"></script>
 		<link rel="stylesheet" type="text/css" href="../../dist/uv.css">
-		<title>r3vis Test Arena</title>
+		<title>uvCharts Test Arena</title>
 	</head>
 	<body onload="init()">
 		<div class="r3_div"></div>
