Refactoring of class names
- Removed any reference to r3 in class names.
- Added prefix uv for class names.
- Using d3 "classed" selection instead of "attr" to avoid any overwriting
  of exisiting class names.
- Using hyphen instead of underscore in class names.
- fixed bug with mouseover event on area chart.

--- a/test/d3/d3sample_1.html
+++ b/test/d3/d3sample_1.html
@@ -6,9 +6,9 @@
 		<script type="text/javascript" src="d3sample_1.js"></script>
 		<script type="text/javascript" src="../../dist/uvcharts.js"></script>
 		<link rel="stylesheet" type="text/css" href="../../dist/uv.css">
-		<title>r3vis Test Arena</title>
+		<title>uvCharts Test Arena</title>
 	</head>
 	<body onload="init()">
-		<div class="r3_div"></div>
+		<div class="uv_div"></div>
 	</body>
 </html>
