--- a/test/d3/uvCharts-test.html
+++ b/test/d3/uvCharts-test.html
@@ -9,6 +9,6 @@
 		<title>uvCharts Test Arena</title>
 	</head>
 	<body onload="init()">
-		<div class="r3_div"></div>
+		<div class="uv_div"></div>
 	</body>
 </html>
