--- a/test/data/data_test.html
+++ b/test/data/data_test.html
@@ -14,6 +14,6 @@
 		<script type="text/javascript" src="data_test.js"></script>
 	</head>
 	<body onload="init()">
-		<div id="r3_div" class="r3_div"></div>
+		<div id="uv_div" class="uv_div"></div>
 	</body>
 </head>
