- Modified gitignore to ignore build directory, used internally for   building library to test - Added grunt release and copy tasks to release a build to distribution   ready folder - Updated package.json to add new dependencies - Updated test files to read from the build directory instead of dist   ready files

--- a/test/d3/uvCharts-test.html
+++ b/test/d3/uvCharts-test.html
@@ -4,8 +4,8 @@
 		<script type="text/javascript" src="../../lib/d3.v3.min.js" ></script>
 		<script type="text/javascript" src="../../lib/jquery-1.9.1.min.js" ></script>
 		<script type="text/javascript" src="uvCharts_test.js"></script>
-		<script type="text/javascript" src="../../dist/uvcharts.js"></script>
-		<link rel="stylesheet" type="text/css" href="../../dist/uv.css">
+		<script type="text/javascript" src="../../build/uvcharts.js"></script>
+		<link rel="stylesheet" type="text/css" href="../../build/uv.css">
 		<title>uvCharts Test Arena</title>
 	</head>
 	<body onload="init()">
