--- a/test/d3/d3sample_1.html
+++ b/test/d3/d3sample_1.html
@@ -4,7 +4,7 @@
 		<script type="text/javascript" src="../../lib/d3.v3.min.js" ></script>
 		<script type="text/javascript" src="../../lib/jquery-1.9.1.min.js" ></script>
 		<script type="text/javascript" src="d3sample_1.js"></script>
-		<script type="text/javascript" src="../../build/uvcharts.js"></script>
+		<script type="text/javascript" src="../../build/uvcharts.min.js"></script>
 		<link rel="stylesheet" type="text/css" href="../../build/uv.css">
 		<title>uvCharts Test Arena</title>
 	</head>
