Removing jquery dependency
-Made required changed to use custom config directly instead of using
jquery extend method.
-Moved test sample data from src/util/constants to test.

--- a/test/gfx/d3sample_1.html
+++ b/test/gfx/d3sample_1.html
@@ -2,7 +2,7 @@
 	<head>
 		<link href='http://fonts.googleapis.com/css?family=Ubuntu:400,500' rel='stylesheet' type='text/css'>
 		<script type="text/javascript" src="../../lib/d3.v3.min.js" ></script>
-		<script type="text/javascript" src="../../lib/jquery-1.9.1.min.js" ></script>
+		<script type="text/javascript" src="sample_dataset.js"></script>
 		<script type="text/javascript" src="d3sample_1.js"></script>
 		<script type="text/javascript" src="../../build/uvcharts.js"></script>
 		<script type="text/javascript" src="../../lib/canvas-toBlob.js" ></script>
