Added few config options
- Added sufix and prefix for label
- Added opacity option for chart
- Added configuration to show or hide ticks and subticks
- Fixed issue when giving custom config with download option

--- a/test/data/data_test.html
+++ b/test/data/data_test.html
@@ -14,6 +14,6 @@
 		<script type="text/javascript" src="data_test.js"></script>
 	</head>
 	<body onload="init()">
-		<div id="uv_div" class="uv_div"></div>
+		<div id="uv-div" class="uv-div"></div>
 	</body>
 </head>
