--- a/test/gfx/d3sample_1.html
+++ b/test/gfx/d3sample_1.html
@@ -13,6 +13,6 @@
 		<title>uvCharts Test Arena</title>
 	</head>
 	<body onload="init()">
-		<div class="uv_div"></div>
+		<div class="uv-div"></div>
 	</body>
 </html>
