--- a/test/gfx/d3sample_1.html
+++ b/test/gfx/d3sample_1.html
@@ -2,7 +2,7 @@
 	<head>
 		<link href='http://fonts.googleapis.com/css?family=Ubuntu:400,500' rel='stylesheet' type='text/css'>
 		<script type="text/javascript" src="../../lib/d3.v3.min.js" ></script>
-		<script type="text/javascript" src="sample_dataset.js"></script>
+		<script type="text/javascript" src="./data/sample_dataset.js"></script>
 		<script type="text/javascript" src="d3sample_1.js"></script>
 		<script type="text/javascript" src="../../build/uvcharts.js"></script>
 		<script type="text/javascript" src="../../lib/canvas-toBlob.js" ></script>
@@ -13,6 +13,6 @@
 		<title>uvCharts Test Arena</title>
 	</head>
 	<body onload="init()">
-		<div class="uv-div"></div>
+		<div id="uv-div" class="uv-div"></div>
 	</body>
 </html>
