--- a/test/gfx/uvCharts-test.html
+++ b/test/gfx/uvCharts-test.html
@@ -2,12 +2,12 @@
 	<head>
 		<link href='http://fonts.googleapis.com/css?family=Ubuntu:400,500' rel='stylesheet' type='text/css'>
 		<script type="text/javascript" src="../../build/uvcharts.js"></script>
+		<script type="text/javascript" src="../../build/lvTest.js"></script>
 		<script type="text/javascript" src="../../lib/d3.v3.min.js" ></script>
 		<script type="text/javascript" src="uvCharts_test.js"></script>
-		<link rel="stylesheet" type="text/css" href="../../build/uv.css">
 		<title>uvCharts Test Arena</title>
 	</head>
 	<body onload="init()">
-		<div class="uv-div"></div>
+		<div id="uv-div" class="uv-div"></div>
 	</body>
 </html>
