Documentation for area, pie, donut configuration options added

--- a/documentation.html
+++ b/documentation.html
@@ -265,6 +265,7 @@
 	}
 }</strong></pre>
 						</div>
+						<p>Group name and their corresponding properties follows: </p>
 						<div class="config-details">
 							<!-- <div class="config-group">
 								<div class="config-group-title">graph</div>
