--- a/documentation.html
+++ b/documentation.html
@@ -128,6 +128,14 @@
 						<div class="group-content">
 							<div class="group-title">Introduction</div>
 							<div class="group-desc">uvCharts is a JavaScript based charting library built using the famous d3.js library. uvCharts lets you skip all the tough learning and coding part involved with d3.js and yet build simple, robust, completely customisable charts on any page on the web with utmost ease.
+
+							<p>
+							You'll have to include both d3.js and uvCharts on any webpage where you wish to use the library.</p>
+							<div class="code-ex"> 
+<pre>&lt;script type="text/javascript" src="<strong>$PATH_TO_D3JS</strong>"&gt;&lt;/script&gt;
+&lt;script type="text/javascript" src="<strong>$PATH_TO_UVCHARTS</strong>"&gt;&lt;/script&gt;
+</pre>
+								</div>
 							</div>
 						</div>
 					</div>
@@ -136,7 +144,7 @@
 						<div class="group-content">
 							<div class="group-title">API</div>
 							<div class="group-desc">
-							During the entire development phase, we wanted to make things easier and simpler for the end user and at the end we've managed to deliver something really amazing, a single function API. In the lighter sense, We call it the one function to rule them all (charts, we mean).
+							We started off wanting to make it easier for people to harness the power of d3.js and at the end, we've managed to build something really amazing, a single function API for all your charting needs. In the lighter sense, We call it the one function to rule them all (charts, we mean).
 								<div class="code-ex">var chartObject = <strong>uv.chart(<strong>chartType</strong>, <strong>graphDefinition</strong>, <strong>optionalConfiguration</strong>)</strong></div>
 								
 								The function returns a uvChart object which exposes d3 selections so more adventurous users can harness the power of d3 even after the chart is created.
