--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 						<!-- <span>uv</span>
 						<span>Charts</span> -->
 						<a href="index.html">
-							<img height="52px" width="" src="images/uvCharts_logo.png"></img>
+							<img height="52px" src="images/uvCharts_logo.png"></img>
 						</a>
 				</div>
 				<div class="nav rf">
