Added some more elements on the index page ... modified some styling

--- a/index.html
+++ b/index.html
@@ -112,6 +112,7 @@
 		<div id="charts" class="w box break-before">
 			<div class="c" style="text-align: center;padding-bottom:18px;">
 				<div class="box-title">Charts</div>
+				<div class="chart-intro">We have all your basic charting needs covered and we're busy brewing more.</div>
 				<img class="chart-collage" style="display:block; margin: 0 auto;" src="images/banner.png" width="775px"></img>
 				<div class="charts-boxes">
 					<div class="charts-box box33">
@@ -139,6 +140,11 @@
 						</ul>
 					</div>
 				</div>
+			</div>
+		</div>
+		<div id="tutorial-note" class="w box break-before">
+			<div class="c" style="text-align: center;padding:18px;">
+				Want to use uvCharts in your project? Get started <a target="_blank" href="https://github.com/Imaginea/uvCharts/wiki/guide">here</a>
 			</div>
 		</div>
 		<div class="w footer" style="font-family:sans-serif;">
