--- a/documentation.html
+++ b/documentation.html
@@ -27,7 +27,7 @@
 					</ul>
 					<a href="https://raw.github.com/Imaginea/uvCharts/master/dist/uvcharts.zip"><button class="download">Download</button></a>
 				</div>
-				<a href="https://github.com/imaginea/uvCharts"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png" alt="Fork me on GitHub"></a>
+				<a target="_blank" href="https://github.com/imaginea/uvCharts"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png" alt="Fork me on GitHub"></a>
 			</div>
 
 		</div>
