--- a/documentation.html
+++ b/documentation.html
@@ -25,7 +25,7 @@
 							<a href="documentation.html">Documentation</a>
 						</li>
 					</ul>
-					<a href="https://raw.github.com/Imaginea/uvCharts/master/dist/uvcharts.zip"><button class="download">Download</button></a>
+					<a href="https://raw.github.com/Imaginea/uvCharts/master/dist/uvcharts-1.0.1.zip"><button class="download">Download</button></a>
 				</div>
 				<a target="_blank" href="https://github.com/imaginea/uvCharts"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png" alt="Fork me on GitHub"></a>
 			</div>
