Linking quick start guide from the documentation page

--- a/documentation.html
+++ b/documentation.html
@@ -40,6 +40,9 @@
 				<div class="doc-menu">
 					<div class="doc-nav-group">
 						<div class="doc-nav-header">
+							<a href="#quick-start-guide">Quick Start Guide</a>
+						</div>
+						<div class="doc-nav-header">
 							<a href="#API">API</a>
 						</div>
 					</div>
@@ -136,6 +139,15 @@
 &lt;script type="text/javascript" src="<strong>$PATH_TO_UVCHARTS</strong>"&gt;&lt;/script&gt;
 </pre>
 								</div>
+							</div>
+						</div>
+					</div>
+
+					<div id="quick-start-guide" class="doc-group">
+						<div class="group-content">
+							<div class="group-title">Quick Start Guide</div>
+							<div class="group-desc">
+							If you want a whirlwind 5 minutes tour of how to use uvCharts within your web page, do read our <a href="https://github.com/Imaginea/uvCharts/blob/master/readme/uvcharts_quick_start_guide.md" target="_blank">Quick Start Guide</a>.
 							</div>
 						</div>
 					</div>
