--- a/test/data/data_test.html
+++ b/test/data/data_test.html
@@ -2,7 +2,7 @@
 	<head>
 		<script type="text/javascript" src="../../lib/jquery-1.7.2.min.js"></script>
 		<link href='http://fonts.googleapis.com/css?family=Ubuntu:400,500' rel='stylesheet' type='text/css'>
-		<script type="text/javascript" src="../../lib/d3.v3.min.js"></script>
+		<script type="text/javascript" src="../../lib/d3/d3.js"></script>
 		<script type="text/javascript" src="../../dist/uvcharts.js"></script>
 		<script type="text/javascript" src="../../src/data/data.js"></script>
 		<script type="text/javascript" src="../../src/data/groupby.js"></script>
