--- a/test/gfx/simple_test.html
+++ b/test/gfx/simple_test.html
@@ -1,14 +1,10 @@
 <html>
 	<head>
 		<link href='http://fonts.googleapis.com/css?family=Ubuntu:400,500' rel='stylesheet' type='text/css'>
-		<script type="text/javascript" src="../../lib/d3.v3.min.js" ></script>
+		<script type="text/javascript" src="../../lib/d3/d3.js" ></script>
 		<script type="text/javascript" src="./data/sample_dataset.js"></script>
 		<script type="text/javascript" src="simple_test.js"></script>
 		<script type="text/javascript" src="../../build/uvcharts.js"></script>
-		<script type="text/javascript" src="../../lib/canvas-toBlob.js" ></script>
-		<script type="text/javascript" src="../../lib/canvg.js" ></script>
-		<script type="text/javascript" src="../../lib/rgbcolor.js" ></script>
-		<script type="text/javascript" src="../../lib/FileSaver.js" ></script>
 		<title>uvCharts Test Arena</title>
 	</head>
 	<body onload="init()">
