Fixes and updates download link to latest release

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 							<a href="documentation.html">Documentation</a>
 						</li>
 					</ul>
-					<a href="https://raw.github.com/Imaginea/uvCharts/master/dist/uvcharts-1.0.5.zip">
+					<a href="https://github.com/Imaginea/uvCharts/releases/download/1.1.0/uvcharts-1.1.0.zip">
 						<button class="download">Download</button>
 					</a>
 				</div>
