removed http protocol for loading d3

--- a/demo.html
+++ b/demo.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>UV Demo Chart</title>
-    <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/d3/3.2.2/d3.v3.min.js"></script>
+    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/d3/3.2.2/d3.v3.min.js"></script>
     <script type="text/javascript" src="./js/uvcharts/uvcharts.js"></script>
 </head>
 
