--- a/demo.html
+++ b/demo.html
@@ -32,6 +32,9 @@
         var config1 = {
             meta : {
                 position: "#uv-div1"
+            },
+            graph: {
+                orientation: "Vertical"
             }
         }
         var charts = [ 'Bar','Line', 'Area', 'StackedBar', 'StackedArea', 'Pie', ' PercentBar', 'PercentArea', 'Donut', 'StepUpBar', 'PolarArea', 'Waterfall' ];
